@@ -1,15 +1,18 @@
 #!/usr/bin/perl
 
 use lib 'lib', 't/lib';
-use Test::Most tests => 4;
+use Test::Most tests => 8;
 use Data::Dumper;
 
 no warnings 'redefine';
 
-my @EXPLAIN;
-local *Test::More::note = sub { @EXPLAIN = @_ };
+my @NOTE;
+local *Test::More::note = sub { @NOTE = @_ };
+my @DIAG;
+local *Test::More::diag = sub { @DIAG = @_ };
+
 explain 'foo';
-eq_or_diff \@EXPLAIN, ['foo'], 'Basic explain() should work just fine';
+eq_or_diff \@NOTE, ['foo'], 'Basic explain() should work just fine';
 
 my $aref = [qw/this that/];
 {
@@ -19,7 +22,7 @@ my $aref = [qw/this that/];
 
     explain 'hi', $aref, 'bye';
 
-    eq_or_diff \@EXPLAIN, [ 'hi', Dumper($aref), 'bye' ],
+    eq_or_diff \@NOTE, [ 'hi', Dumper($aref), 'bye' ],
       '... and also allow you to dump references';
 }
 
@@ -34,12 +37,47 @@ my $aref = [qw/this that/];
         eval "use Data::Dumper::Names ()";
         skip 'show() requires Data::Dumper::Names version 0.03 or better', 2
             if $@ or $Data::Dumper::Names::VERSION < .03;
-        eq_or_diff \@EXPLAIN,  [$expected],
+        eq_or_diff \@NOTE,  [$expected],
             '... and show() should try to show the variable name';
 
         show 3;
-        chomp @EXPLAIN;
-        eq_or_diff \@EXPLAIN, ['$VAR1 = 3;'],
+        chomp @NOTE;
+        eq_or_diff \@NOTE, ['$VAR1 = 3;'],
+            '... but will default to $VARX names if it can\'t';
+    }
+}
+
+always_explain 'foo';
+eq_or_diff \@DIAG, ['foo'], 'Basic always_explain() should work just fine';
+
+{
+    local $Data::Dumper::Indent   = 1;
+    local $Data::Dumper::Sortkeys = 1;
+    local $Data::Dumper::Terse    = 1;
+
+    always_explain 'hi', $aref, 'bye';
+
+    eq_or_diff \@DIAG, [ 'hi', Dumper($aref), 'bye' ],
+      '... and also allow you to dump references';
+}
+
+{
+    my $expected;
+    local $Data::Dumper::Indent = 1;
+    $expected = Dumper($aref);
+    $expected =~ s/VAR1/aref/;
+    always_show $aref;
+
+    SKIP: {
+        eval "use Data::Dumper::Names ()";
+        skip 'always_show() requires Data::Dumper::Names version 0.03 or better', 2
+            if $@ or $Data::Dumper::Names::VERSION < .03;
+        eq_or_diff \@DIAG,  [$expected],
+            '... and always_show() should try to show the variable name';
+
+        always_show 3;
+        chomp @DIAG;
+        eq_or_diff \@DIAG, ['$VAR1 = 3;'],
             '... but will default to $VARX names if it can\'t';
     }
 }
